--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <div class="container">
-    <h2>📦 Registro de Inventario</h2>
+    <h2>📦 Registro de Inventarioo</h2>
     <input type="text" id="nombre" placeholder="Nombre del producto">
     <input type="number" id="cantidad" placeholder="Cantidad en stock">
     <button id="btnGuardar">Guardar en Firebase</button>
