--- a/index.html
+++ b/index.html
@@ -2,80 +2,36 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Mi Inventario Pro</title>
-    <style>
-        body { font-family: sans-serif; margin: 20px; background: #f4f4f4; }
-        .container { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        input, button { padding: 10px; margin: 5px 0; display: block; width: 100%; box-sizing: border-box; }
-        button { background: #007bff; color: white; border: none; cursor: pointer; }
-        #listaProductos { margin-top: 20px; }
-        .producto-item { border-bottom: 1px solid #eee; padding: 10px 0; }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inventario Pro | Firebase</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="container">
-    <h2>📦 Registro de Inventarioo</h2>
-    <input type="text" id="nombre" placeholder="Nombre del producto">
-    <input type="number" id="cantidad" placeholder="Cantidad en stock">
-    <button id="btnGuardar">Guardar en Firebase</button>
+    <div class="container">
+        <header>
+            <h1>📦 Sistema de Inventario</h1>
+            <p>Gestión en tiempo real conectada a Firebase</p>
+        </header>
 
-    <h3>Productos actuales:</h3>
-    <div id="listaProductos"></div>
-</div>
+        <section class="formulario">
+            <div class="input-group">
+                <input type="text" id="nombre" placeholder="Nombre del producto" required>
+                <input type="number" id="cantidad" placeholder="Cantidad inicial" required>
+                <button id="btnGuardar">Agregar Producto</button>
+            </div>
+        </section>
 
-<script type="module">
-    // Importamos las librerías de Firebase
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getFirestore, collection, addDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        <hr>
 
-    // TUS CREDENCIALES (Copiadas de tu imagen)
-    const firebaseConfig = {
-        apiKey: "AIzaSyCtIagFFJBFRjvg5usXTm575YqOeeDE1G0",
-        authDomain: "mi-inventario-51f82.firebaseapp.com",
-        projectId: "mi-inventario-51f82",
-        storageBucket: "mi-inventario-51f82.firebasestorage.app",
-        messagingSenderId: "79417755416",
-        appId: "1:79417755416:web:e1bbab46cda2bdbb5da56d"
-    };
+        <section>
+            <h3>Productos en Existencia</h3>
+            <div id="listaProductos" class="grid-productos">
+                </div>
+        </section>
+    </div>
 
-    // Inicializar Firebase y la Base de Datos
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    <script type="module" src="app.js"></script>
 
-    const btnGuardar = document.getElementById('btnGuardar');
-    const listaDiv = document.getElementById('listaProductos');
-
-    // FUNCIÓN PARA GUARDAR
-    btnGuardar.onclick = async () => {
-        const nombre = document.getElementById('nombre').value;
-        const cantidad = document.getElementById('cantidad').value;
-
-        try {
-            await addDoc(collection(db, "productos"), {
-                nombre: nombre,
-                cantidad: Number(cantidad),
-                fecha: new Date()
-            });
-            alert("¡Producto guardado!");
-            document.getElementById('nombre').value = "";
-            document.getElementById('cantidad').value = "";
-        } catch (e) {
-            console.error("Error al guardar: ", e);
-        }
-    };
-
-    // FUNCIÓN PARA LEER EN TIEMPO REAL
-    onSnapshot(collection(db, "productos"), (querySnapshot) => {
-        listaDiv.innerHTML = "";
-        querySnapshot.forEach((doc) => {
-            const p = doc.data();
-            listaDiv.innerHTML += `
-                <div class="producto-item">
-                    <strong>${p.nombre}</strong> - Stock: ${p.cantidad}
-                </div>`;
-        });
-    });
-</script>
 </body>
 </html>
