--- a/index.html
+++ b/index.html
@@ -3,35 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventario Pro | Firebase</title>
+    <title>Sistema de Inventario | Firebase</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="main-container">
+        <aside class="sidebar">
+            <h2 class="sidebar-title">AGREGAR NUEVO</h2>
+            <div class="form-panel">
+                <label>Nombre:</label>
+                <input type="text" id="nombre" placeholder="Nombre del producto">
+                
+                <label>Código:</label>
+                <input type="text" id="codigo" placeholder="Código único">
+                
+                <label>Categoría:</label>
+                <select id="categoria">
+                    <option value="Electrónica">Electrónica</option>
+                    <option value="Ropa">Ropa</option>
+                    <option value="Hogar">Hogar</option>
+                    <option value="Otros">Otros</option>
+                </select>
 
-    <div class="container">
-        <header>
-            <h1>📦 Sistema de Inventario</h1>
-            <p>Gestión en tiempo real conectada a Firebase</p>
-        </header>
+                <label>Cantidad:</label>
+                <input type="number" id="cantidad" placeholder="Cantidad en stock">
 
-        <section class="formulario">
-            <div class="input-group">
-                <input type="text" id="nombre" placeholder="Nombre del producto" required>
-                <input type="number" id="cantidad" placeholder="Cantidad inicial" required>
-                <button id="btnGuardar">Agregar Producto</button>
-            </div>
-        </section>
-
-        <hr>
-
-        <section>
-            <h3>Productos en Existencia</h3>
-            <div id="listaProductos" class="grid-productos">
+                <div class="button-group">
+                    <button id="btnGuardar" class="btn-save">💾 Guardar</button>
                 </div>
-        </section>
+            </div>
+        </aside>
+
+        <main class="content">
+            <div class="top-bar">
+                <div class="tabs">
+                    <button class="tab active">📋 Gestión de Productos</button>
+                    <button class="tab">📤 Salidas de Productos</button>
+                </div>
+                <div class="search-container">
+                    🔍 <input type="text" id="buscador" placeholder="Buscar por nombre o código...">
+                </div>
+            </div>
+
+            <table class="inventory-table">
+                <thead>
+                    <tr>
+                        <th>Código</th>
+                        <th>Nombre</th>
+                        <th>Categoría</th>
+                        <th>Cantidad</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody id="listaProductos">
+                    </tbody>
+            </table>
+        </main>
     </div>
 
     <script type="module" src="app.js"></script>
-
 </body>
 </html>
