--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>SISTEMA DE INVENTARIO PROFESIONAL</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SISTEMA DE INVENTARIO PRO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="status-bar"><span id="auth-status">⚠️ ESTADO: NO AUTENTICADO</span></div>
 
     <nav class="main-nav">
-        <button onclick="showSection('login-section')" class="nav-btn">🔐 INICIO</button>
+        <button onclick="showSection('login-section')" class="nav-btn">🔐 LOGIN</button>
         <button onclick="showSection('gestion-section')" class="nav-btn">📦 GESTIÓN</button>
         <button onclick="showSection('salidas-section')" class="nav-btn">📤 SALIDAS</button>
         <button onclick="showSection('devoluciones-section')" class="nav-btn">🔄 DEVOLUCIONES</button>
@@ -19,7 +20,7 @@
         <section id="login-section" class="tab-content active">
             <div class="login-box">
                 <h2>INICIAR SESIÓN</h2>
-                <input type="text" id="user-input" placeholder="Usuario (Ej: A)">
+                <input type="text" id="user-input" placeholder="Usuario (A)">
                 <input type="password" id="pass-input" placeholder="Contraseña">
                 <button id="btnLogin" class="btn-save">ENTRAR</button>
             </div>
@@ -28,29 +29,23 @@
         <section id="gestion-section" class="tab-content">
             <div class="panel-layout">
                 <aside class="sidebar">
-                    <h3>AGREGAR / ACTUALIZAR</h3>
-                    <label>Nombre del Producto:</label>
-                    <input type="text" id="g-nombre">
-                    <label>Código:</label>
-                    <input type="text" id="g-codigo">
-                    <label>Cantidad:</label>
-                    <input type="number" id="g-cantidad">
-                    <label>Categoría:</label>
+                    <h3>AGREGAR / EDITAR</h3>
+                    <input type="text" id="g-nombre" placeholder="Nombre del producto">
+                    <input type="text" id="g-codigo" placeholder="Código">
+                    <input type="number" id="g-cantidad" placeholder="Cantidad">
                     <select id="g-categoria">
-                        <option>Electrónica</option>
-                        <option>Hogar</option>
-                        <option>Ropa</option>
+                        <option value="Electrónica">Electrónica</option>
+                        <option value="Hogar">Hogar</option>
                     </select>
-                    <label>Estado:</label>
                     <select id="g-estado">
-                        <option>Nuevo</option>
-                        <option>Semi nuevo</option>
+                        <option value="Nuevo">Nuevo</option>
+                        <option value="Semi nuevo">Semi nuevo</option>
                     </select>
                     <button id="btnGuardar" class="btn-save">💾 GUARDAR PRODUCTO</button>
                 </aside>
                 <main class="table-area">
                     <div class="header-table">
-                        <input type="text" id="buscador" placeholder="🔍 BUSCAR POR NOMBRE O CÓDIGO...">
+                        <input type="text" id="buscador" placeholder="🔍 Buscar por nombre o código...">
                     </div>
                     <table class="data-table">
                         <thead>
@@ -58,8 +53,8 @@
                                 <th>CÓDIGO</th>
                                 <th>NOMBRE</th>
                                 <th>STOCK</th>
-                                <th>ESTADO</th>
                                 <th>CATEGORÍA</th>
+                                <th>ESTADO</th>
                             </tr>
                         </thead>
                         <tbody id="tbody-productos"></tbody>
@@ -72,10 +67,10 @@
             <div class="panel-layout">
                 <aside class="sidebar">
                     <h3>REGISTRAR SALIDA</h3>
-                    <input type="text" id="s-codigo" placeholder="Código del Producto">
+                    <input type="text" id="s-codigo" placeholder="Código">
                     <input type="number" id="s-cantidad" placeholder="Cantidad a retirar">
-                    <input type="text" id="s-responsable" placeholder="Nombre Responsable">
-                    <button id="btnRegistrarSalida" class="btn-warning">🚀 REGISTRAR SALIDA</button>
+                    <input type="text" id="s-responsable" placeholder="Responsable">
+                    <button id="btnRegistrarSalida" class="btn-warning">🚀 SALIDA</button>
                 </aside>
                 <main class="table-area">
                     <table class="data-table">
@@ -97,10 +92,10 @@
             <div class="panel-layout">
                 <aside class="sidebar">
                     <h3>REGISTRAR DEVOLUCIÓN</h3>
-                    <input type="text" id="d-codigo" placeholder="Código del Producto">
+                    <input type="text" id="d-codigo" placeholder="Código">
                     <input type="number" id="d-cantidad" placeholder="Cantidad devuelta">
                     <input type="text" id="d-motivo" placeholder="Motivo">
-                    <button id="btnRegistrarDevolucion" class="btn-primary">🔄 REGISTRAR DEVOLUCIÓN</button>
+                    <button id="btnRegistrarDevolucion" class="btn-primary">🔄 DEVOLUCIÓN</button>
                 </aside>
                 <main class="table-area">
                     <table class="data-table">
@@ -118,7 +113,6 @@
             </div>
         </section>
     </div>
-
     <script type="module" src="app.js"></script>
 </body>
 </html>
