--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SISTEMA DE INVENTARIO PRO + SEGURIDAD</title>
+    <title>SISTEMA DE INVENTARIO PROFESIONAL</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="status-bar">
-        <span id="auth-status">⚠️ ESTADO: NO AUTENTICADO</span>
-        <span id="user-info" style="margin-left: 20px; font-size: 11px; color: #555;"></span>
+        <span id="auth-status">⚠️ NO AUTENTICADO</span>
+        <span id="geo-info" style="margin-left:auto; font-size:11px; opacity:0.7;"></span>
     </div>
 
     <nav class="main-nav">
-        <button onclick="showSection('login-section')" class="nav-btn">🔐 LOGIN</button>
+        <button onclick="showSection('login-section')" class="nav-btn">🔐 INICIO</button>
         <button onclick="showSection('gestion-section')" class="nav-btn">📦 GESTIÓN</button>
         <button onclick="showSection('salidas-section')" class="nav-btn">📤 SALIDAS</button>
         <button onclick="showSection('devoluciones-section')" class="nav-btn">🔄 DEVOLUCIONES</button>
@@ -25,43 +24,31 @@
                 <h2>INICIAR SESIÓN</h2>
                 <input type="text" id="user-input" placeholder="Usuario (A)">
                 <input type="password" id="pass-input" placeholder="Contraseña">
-                <button id="btnLogin" class="btn-save">ENTRAR</button>
-                <p id="log-msg" style="font-size: 10px; color: #666; margin-top: 10px;"></p>
+                <button id="btnLogin" class="btn-primary">ENTRAR</button>
             </div>
         </section>
 
         <section id="gestion-section" class="tab-content">
             <div class="panel-layout">
                 <aside class="sidebar">
-                    <h3>AGREGAR / EDITAR</h3>
-                    <input type="text" id="g-nombre" placeholder="Nombre del producto">
+                    <h3>AGREGAR/EDITAR</h3>
+                    <input type="text" id="g-nombre" placeholder="Nombre">
                     <input type="text" id="g-codigo" placeholder="Código">
                     <input type="number" id="g-cantidad" placeholder="Cantidad">
-                    <select id="g-categoria">
-                        <option value="Electrónica">Electrónica</option>
-                        <option value="Hogar">Hogar</option>
-                    </select>
-                    <select id="g-estado">
-                        <option value="Nuevo">Nuevo</option>
-                        <option value="Semi nuevo">Semi nuevo</option>
-                    </select>
-                    <button id="btnGuardar" class="btn-save">💾 GUARDAR PRODUCTO</button>
+                    <select id="g-categoria"><option>Electrónica</option><option>Hogar</option></select>
+                    <select id="g-estado"><option>Nuevo</option><option>Semi nuevo</option></select>
+                    <div style="display:flex; gap:5px;">
+                        <button id="btnGuardar" class="btn-save" style="flex:1">💾 Guardar</button>
+                        <button id="btnEliminar" class="btn-danger" style="flex:1">🗑️ Borrar</button>
+                    </div>
                 </aside>
                 <main class="table-area">
                     <div class="header-table">
-                        <input type="text" id="buscador" placeholder="Escriba aquí (ej: esp)...">
-                        <button id="btnBuscar" class="btn-primary" style="margin-left: 5px; border-radius: 20px;">🔍 BUSCAR</button>
+                        <input type="text" id="buscador" placeholder="Buscar por nombre o código...">
+                        <button id="btnBuscar" class="btn-primary">🔍 BUSCAR</button>
                     </div>
                     <table class="data-table">
-                        <thead>
-                            <tr>
-                                <th>CÓDIGO</th>
-                                <th>NOMBRE</th>
-                                <th>STOCK</th>
-                                <th>CATEGORÍA</th>
-                                <th>ESTADO</th>
-                            </tr>
-                        </thead>
+                        <thead><tr><th>COD</th><th>NOMBRE</th><th>STOCK</th><th>ESTADO</th></tr></thead>
                         <tbody id="tbody-productos"></tbody>
                     </table>
                 </main>
@@ -73,20 +60,13 @@
                 <aside class="sidebar">
                     <h3>REGISTRAR SALIDA</h3>
                     <input type="text" id="s-codigo" placeholder="Código">
-                    <input type="number" id="s-cantidad" placeholder="Cantidad a retirar">
+                    <input type="number" id="s-cantidad" value="1">
                     <input type="text" id="s-responsable" placeholder="Responsable">
-                    <button id="btnRegistrarSalida" class="btn-warning">🚀 SALIDA</button>
+                    <button id="btnRegistrarSalida" class="btn-warning">🚀 Salida</button>
                 </aside>
                 <main class="table-area">
                     <table class="data-table">
-                        <thead>
-                            <tr>
-                                <th>CÓDIGO</th>
-                                <th>RESPONSABLE</th>
-                                <th>CANT.</th>
-                                <th>FECHA</th>
-                            </tr>
-                        </thead>
+                        <thead><tr><th>COD</th><th>RESPONSABLE</th><th>CANT</th><th>FECHA</th></tr></thead>
                         <tbody id="tbody-salidas"></tbody>
                     </table>
                 </main>
@@ -98,20 +78,14 @@
                 <aside class="sidebar">
                     <h3>REGISTRAR DEVOLUCIÓN</h3>
                     <input type="text" id="d-codigo" placeholder="Código">
-                    <input type="number" id="d-cantidad" placeholder="Cantidad devuelta">
+                    <input type="number" id="d-cantidad" value="1">
                     <input type="text" id="d-motivo" placeholder="Motivo">
-                    <button id="btnRegistrarDevolucion" class="btn-primary" style="background:#2980b9">🔄 DEVOLUCIÓN</button>
+                    <textarea id="d-obs" placeholder="Observaciones"></textarea>
+                    <button id="btnRegistrarDevolucion" class="btn-teal">🔄 Devolución</button>
                 </aside>
                 <main class="table-area">
                     <table class="data-table">
-                        <thead>
-                            <tr>
-                                <th>CÓDIGO</th>
-                                <th>MOTIVO</th>
-                                <th>CANT.</th>
-                                <th>FECHA</th>
-                            </tr>
-                        </thead>
+                        <thead><tr><th>COD</th><th>NOMBRE</th><th>CANT</th><th>MOTIVO</th><th>USUARIO</th><th>FECHA</th></tr></thead>
                         <tbody id="tbody-devoluciones"></tbody>
                     </table>
                 </main>
