--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>SISTEMA DE INVENTARIO PROFESIONAL</title>
+    <title>SISTEMA DE INVENTARIO SEGURO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="status-bar">
         <span id="auth-status">⚠️ NO AUTENTICADO</span>
-        <span id="geo-info" style="margin-left:auto; font-size:11px; opacity:0.7;"></span>
+        <span id="user-display" style="margin-left:20px; font-weight:normal; font-size:12px;"></span>
     </div>
 
     <nav class="main-nav">
@@ -16,15 +16,16 @@
         <button onclick="showSection('gestion-section')" class="nav-btn">📦 GESTIÓN</button>
         <button onclick="showSection('salidas-section')" class="nav-btn">📤 SALIDAS</button>
         <button onclick="showSection('devoluciones-section')" class="nav-btn">🔄 DEVOLUCIONES</button>
+        <button id="nav-historial" onclick="showSection('historial-section')" class="nav-btn" style="display:none; background:#ffeaa7;">📊 HISTORIAL</button>
     </nav>
 
     <div class="container">
         <section id="login-section" class="tab-content active">
             <div class="login-box">
-                <h2>INICIAR SESIÓN</h2>
-                <input type="text" id="user-input" placeholder="Usuario (A)">
+                <h2>INICIAR</h2>
+                <input type="text" id="user-input" placeholder="Usuario">
                 <input type="password" id="pass-input" placeholder="Contraseña">
-                <button id="btnLogin" class="btn-primary">ENTRAR</button>
+                <button id="btnLogin" class="btn-primary" style="background:#27ae60; border-radius:4px;">Entrar</button>
             </div>
         </section>
 
@@ -39,35 +40,17 @@
                     <select id="g-estado"><option>Nuevo</option><option>Semi nuevo</option></select>
                     <div style="display:flex; gap:5px;">
                         <button id="btnGuardar" class="btn-save" style="flex:1">💾 Guardar</button>
-                        <button id="btnEliminar" class="btn-danger" style="flex:1">🗑️ Borrar</button>
+                        <button id="btnEliminar" class="btn-danger" style="flex:1">🗑️ Eliminar</button>
                     </div>
                 </aside>
                 <main class="table-area">
                     <div class="header-table">
-                        <input type="text" id="buscador" placeholder="Buscar por nombre o código...">
+                        <input type="text" id="buscador" placeholder="Buscar producto...">
                         <button id="btnBuscar" class="btn-primary">🔍 BUSCAR</button>
                     </div>
                     <table class="data-table">
                         <thead><tr><th>COD</th><th>NOMBRE</th><th>STOCK</th><th>ESTADO</th></tr></thead>
                         <tbody id="tbody-productos"></tbody>
-                    </table>
-                </main>
-            </div>
-        </section>
-
-        <section id="salidas-section" class="tab-content">
-            <div class="panel-layout">
-                <aside class="sidebar">
-                    <h3>REGISTRAR SALIDA</h3>
-                    <input type="text" id="s-codigo" placeholder="Código">
-                    <input type="number" id="s-cantidad" value="1">
-                    <input type="text" id="s-responsable" placeholder="Responsable">
-                    <button id="btnRegistrarSalida" class="btn-warning">🚀 Salida</button>
-                </aside>
-                <main class="table-area">
-                    <table class="data-table">
-                        <thead><tr><th>COD</th><th>RESPONSABLE</th><th>CANT</th><th>FECHA</th></tr></thead>
-                        <tbody id="tbody-salidas"></tbody>
                     </table>
                 </main>
             </div>
@@ -81,7 +64,7 @@
                     <input type="number" id="d-cantidad" value="1">
                     <input type="text" id="d-motivo" placeholder="Motivo">
                     <textarea id="d-obs" placeholder="Observaciones"></textarea>
-                    <button id="btnRegistrarDevolucion" class="btn-teal">🔄 Devolución</button>
+                    <button id="btnRegistrarDevolucion" class="btn-teal">🔄 Procesar Devolución</button>
                 </aside>
                 <main class="table-area">
                     <table class="data-table">
@@ -89,6 +72,16 @@
                         <tbody id="tbody-devoluciones"></tbody>
                     </table>
                 </main>
+            </div>
+        </section>
+
+        <section id="historial-section" class="tab-content">
+            <div class="table-area">
+                <h3>HISTORIAL DE MOVIMIENTOS Y ACCESOS</h3>
+                <table class="data-table">
+                    <thead><tr><th>TIPO</th><th>USUARIO</th><th>DETALLE</th><th>IP / MAPS</th><th>FECHA</th></tr></thead>
+                    <tbody id="tbody-historial"></tbody>
+                </table>
             </div>
         </section>
     </div>
