--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>SISTEMA DE INVENTARIO ALTA PRECISIÓN</title>
+    <title>SISTEMA DE INVENTARIO PROFESIONAL - FULL</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,15 +32,15 @@
         <section id="gestion-section" class="tab-content">
             <div class="panel-layout">
                 <aside class="sidebar">
-                    <h3>AGREGAR/EDITAR</h3>
-                    <input type="text" id="g-nombre" placeholder="Nombre">
+                    <h3>CONTROL DE PRODUCTO</h3>
+                    <input type="text" id="g-nombre" placeholder="Nombre (para nuevos)">
                     <input type="text" id="g-codigo" placeholder="Código">
                     <input type="number" id="g-cantidad" placeholder="Cantidad">
                     <select id="g-categoria"><option>Electrónica</option><option>Hogar</option></select>
                     <select id="g-estado"><option>Nuevo</option><option>Semi nuevo</option></select>
                     <div style="display:flex; gap:5px;">
-                        <button id="btnGuardar" class="btn-save" style="flex:1">💾 Guardar</button>
-                        <button id="btnEliminar" class="btn-danger" style="flex:1">🗑️ Borrar</button>
+                        <button id="btnGuardar" class="btn-save" style="flex:1">💾 Guardar/Sumar</button>
+                        <button id="btnEliminarRapido" class="btn-danger" style="flex:1">🗑️ Borrar/Restar</button>
                     </div>
                 </aside>
                 <main class="table-area">
