--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>SISTEMA DE INVENTARIO PROFESIONAL - FULL</title>
+    <title>SISTEMA DE INVENTARIO - REYNOSA 2025</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
                 <h2>INICIAR SESIÓN</h2>
                 <input type="text" id="user-input" placeholder="Usuario">
                 <input type="password" id="pass-input" placeholder="Contraseña">
-                <button id="btnLogin" class="btn-primary" style="background:#27ae60; width:100%; border-radius:4px;">Entrar</button>
+                <button id="btnLogin" class="btn-primary" style="background:#27ae60; width:100%;">Entrar</button>
             </div>
         </section>
 
@@ -95,7 +95,7 @@
 
         <section id="historial-section" class="tab-content">
             <div class="table-area">
-                <h3>HISTORIAL DE MOVIMIENTOS Y DISPOSITIVOS</h3>
+                <h3>HISTORIAL DE DISPOSITIVOS Y MOVIMIENTOS</h3>
                 <table class="data-table">
                     <thead><tr><th>TIPO</th><th>USUARIO</th><th>DISPOSITIVO</th><th>IP / MAPS</th><th>FECHA</th></tr></thead>
                     <tbody id="tbody-historial"></tbody>
