--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <span id="auth-status">⚠️ NO AUTENTICADO</span>
     </div>
 
-    <nav class="main-nav">
+    <nav class="main-nav" id="main-nav-bar" style="display:none;">
         <button onclick="showSection('login-section')" class="nav-btn">🔐 LOGIN</button>
         <button onclick="showSection('gestion-section')" class="nav-btn">📦 GESTIÓN</button>
         <button onclick="showSection('salidas-section')" class="nav-btn">📤 SALIDAS</button>
